set up a basic question screen

--- a/game/question1.html
+++ b/game/question1.html
@@ -4,10 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script defer src="../main.js"></script>
-    <title>CounterReply</title>
   </head>
   <body>
-    <h1>Welcome to CounterReply</h1>
-    <p><a href="./game">Game</a></p>
+    <h1>Ask a Question</h1>
+    <input type="text" id="questionbox">
+    <button onclick="question()">Submit</button>
+    <p>Current Question:</p>
+    <p id="question1"></p>
   </body>
 </html>
