--- a/game/index.html
+++ b/game/index.html
@@ -4,10 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script defer src="../main.js"></script>
-    <title>CounterReply</title>
   </head>
   <body>
     <h1>Welcome to CounterReply</h1>
-    <p><a href="./game">Game</a></p>
+    <button onclick="begin()">Begin Game</button>
   </body>
 </html>
