create answer input and display pages

--- a/game/question.html
+++ b/game/question.html
@@ -8,8 +8,6 @@
   <body>
     <h1>Ask a Question</h1>
     <input type="text" id="questionbox">
-    <button onclick="question()">Submit</button>
-    <p>Current Question:</p>
-    <p id="question1"></p>
+    <button onclick="questionStore()">Submit</button>
   </body>
 </html>
