--- a/game/displayCounters.html
+++ b/game/displayCounters.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script defer src="../main.js"></script>
   </head>
-  <body onload="loadAnswers()">
-    <h1>Time for the answers to:</h1>
+  <body onload="loadCounters()">
+    <h1>Time for the counters to:</h1>
     <h2 id="askQuestion">Whoops! Something went wrong!</h2>
     <h3 id="answer1">Whoops! Something went wrong!</h3>
+    <h3 id="counter1">Whoops! Something went wrong!</h3>
+    <hr>
     <h3 id="answer2">Whoops! Something went wrong!</h3>
-    <button onclick="counterRedirect()"></button>
+    <h3 id="counter2">Whoops! Something went wrong!</h3>
   </body>
 </html>
