added restart button to displayCounters.html

--- a/game/displayCounters.html
+++ b/game/displayCounters.html
@@ -13,5 +13,6 @@
     <hr>
     <h3 id="answer2">Whoops! Something went wrong!</h3>
     <h3 id="counter2">Whoops! Something went wrong!</h3>
+    <button onclick="begin()">Restart</button>
   </body>
 </html>
