--- a/game/displayAnswers.html
+++ b/game/displayAnswers.html
@@ -10,6 +10,6 @@
     <h2 id="askQuestion">Whoops! Something went wrong!</h2>
     <h3 id="answer1">Whoops! Something went wrong!</h3>
     <h3 id="answer2">Whoops! Something went wrong!</h3>
-    <button onclick="counterRedirect()"></button>
+    <button onclick="counterRedirect()">Next</button>
   </body>
 </html>
