formatted with prettier

--- a/game/counterInput.html
+++ b/game/counterInput.html
@@ -1,19 +1,19 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script defer src="../main.js"></script>
   </head>
   <body onload="loadAnswers()">
     <h1>Time to Counter</h1>
     <h2 id="askQuestion">Whoops! Something went wrong!</h2>
     <h3 id="answer1">Whoops! Something went wrong!</h3>
-    <input type="text" id="counterOne">
+    <input type="text" id="counterOne" />
     <button onclick="counterSubmit('One')">Submit</button>
-    <hr>
+    <hr />
     <h3 id="answer2">Whoops! Something went wrong!</h3>
-    <input type="text" id="counterTwo">
+    <input type="text" id="counterTwo" />
     <button onclick="counterSubmit('Two')">Submit</button>
   </body>
 </html>
