--- a/game/displayCounters.html
+++ b/game/displayCounters.html
@@ -1,8 +1,8 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script defer src="../main.js"></script>
   </head>
   <body onload="loadCounters()">
@@ -10,7 +10,7 @@
     <h2 id="askQuestion">Whoops! Something went wrong!</h2>
     <h3 id="answer1">Whoops! Something went wrong!</h3>
     <h3 id="counter1">Whoops! Something went wrong!</h3>
-    <hr>
+    <hr />
     <h3 id="answer2">Whoops! Something went wrong!</h3>
     <h3 id="counter2">Whoops! Something went wrong!</h3>
     <button onclick="begin()">Restart</button>
