--- a/game/answerInput.html
+++ b/game/answerInput.html
@@ -1,17 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script defer src="../main.js"></script>
   </head>
   <body onload="loadQuestion()">
     <h1>Answer this:</h1>
     <h2 id="askQuestion">Whoops! Something went wrong!</h2>
-    <input type="text" id="answerOne">
+    <input type="text" id="answerOne" />
     <button onclick="answerSubmit('One')">Submit</button>
-    <br>
-    <input type="text" id="answerTwo">
+    <br />
+    <input type="text" id="answerTwo" />
     <button onclick="answerSubmit('Two')">Submit</button>
   </body>
 </html>
