--- a/answerInput.html
+++ b/answerInput.html
@@ -8,8 +8,16 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <script defer src="../main.js"></script>
   </head>
-  <body class="container text-center position-absolute top-50 start-50 translate-middle">
-    <h1>CounterReply</h1>
-    <button type="button" class="btn btn-primary" onclick="begin()">Begin Game</button>
+  <body onload="loadQuestion()" class="container text-center position-absolute top-50 start-50 translate-middle">
+    <h1>Answer this:</h1>
+    <h2 id="askQuestion">Whoops! Something went wrong!</h2>
+    <div class="row" id="answerRow">
+    <input type="text" id="answerOne" class="form-control col" />
+    <button type="button" class="btn btn-primary col-3" onclick="answerSubmit('One')">Submit</button>
+    </div>
+    <div class="row">
+    <input type="text" id="answerTwo" class="form-control col"/>
+    <button type="button" class="btn btn-primary col-3" onclick="answerSubmit('Two')">Submit</button>
+    </div>
   </body>
 </html>
