--- a/displayCounters.html
+++ b/displayCounters.html
@@ -8,8 +8,14 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <script defer src="../main.js"></script>
   </head>
-  <body class="container text-center position-absolute top-50 start-50 translate-middle">
-    <h1>CounterReply</h1>
-    <button type="button" class="btn btn-primary" onclick="begin()">Begin Game</button>
+  <body onload="loadCounters()" class="container text-center position-absolute top-50 start-50 translate-middle">
+    <h1>Time for the counters to:</h1>
+    <h2 id="askQuestion">Whoops! Something went wrong!</h2>
+    <h3 id="answer1">Whoops! Something went wrong!</h3>
+    <h3 id="counter1">Whoops! Something went wrong!</h3>
+    <hr />
+    <h3 id="answer2">Whoops! Something went wrong!</h3>
+    <h3 id="counter2">Whoops! Something went wrong!</h3>
+    <button type="button" id="restartButton" class="btn btn-primary" onclick="begin()">Restart</button>
   </body>
 </html>
