--- a/question.html
+++ b/question.html
@@ -8,8 +8,11 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <script defer src="../main.js"></script>
   </head>
-  <body class="container text-center position-absolute top-50 start-50 translate-middle">
-    <h1>CounterReply</h1>
-    <button type="button" class="btn btn-primary" onclick="begin()">Begin Game</button>
+  <body class="container-xl text-center position-absolute top-50 start-50 translate-middle">
+    <h1>Ask a Question</h1>
+    <div class="row">
+    <input type="text" id="questionbox" class="form-control col" placeholder="Type Here"/>
+    <button type="button" class="btn btn-primary col-3" onclick="questionStore()">Submit</button>
+    </div>
   </body>
 </html>
