Makes buttons on input screens change color

--- a/answerInput.html
+++ b/answerInput.html
@@ -13,11 +13,11 @@
     <h2 id="askQuestion">Whoops! Something went wrong!</h2>
     <div class="row" id="answerRow">
     <input type="text" id="answerOne" class="form-control col" />
-    <button type="button" class="btn btn-primary col-3" onclick="answerSubmit('One')">Submit</button>
+    <button type="button" id="buttonOne" class="btn btn-primary col-3" onclick="answerSubmit('One')">Submit</button>
     </div>
     <div class="row">
     <input type="text" id="answerTwo" class="form-control col"/>
-    <button type="button" class="btn btn-primary col-3" onclick="answerSubmit('Two')">Submit</button>
+    <button type="button" id="buttonTwo" class="btn btn-primary col-3" onclick="answerSubmit('Two')">Submit</button>
     </div>
   </body>
 </html>
