--- a/counterInput.html
+++ b/counterInput.html
@@ -14,13 +14,13 @@
     <h2 id="askQuestion">Whoops! Something went wrong!</h2>
     <h3 id="answer1">Whoops! Something went wrong!</h3>
     <input type="text" id="counterOne" class="form-control col"/>
-    <button type="button" class="btn btn-primary col-3" onclick="counterSubmit('One')">Submit</button>
+    <button type="button" id="buttonOne" class="btn btn-primary col-3" onclick="counterSubmit('One')">Submit</button>
     </div>
     <hr />
     <h3 id="answer2">Whoops! Something went wrong!</h3>
     <div class="row">
     <input type="text" id="counterTwo" class="form-control col"/>
-    <button type="button" class="btn btn-primary col-3" onclick="counterSubmit('Two')">Submit</button>
+    <button type="button" id="buttonTwo" class="btn btn-primary col-3" onclick="counterSubmit('Two')">Submit</button>
     </div>
   </body>
 </html>
