--- a/question.html
+++ b/question.html
@@ -2,17 +2,39 @@
 <html lang="en" data-bs-theme="dark">
   <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+      crossorigin="anonymous"
+    ></script>
     <script defer src="./main.js"></script>
   </head>
-  <body class="container-xl text-center position-absolute top-50 start-50 translate-middle">
+  <body
+    class="container-xl text-center position-absolute top-50 start-50 translate-middle"
+  >
     <h1>Ask a Question</h1>
     <div class="row">
-    <input type="text" id="questionbox" class="form-control col" placeholder="Type Here"/>
-    <button type="button" class="btn btn-primary col-3" onclick="questionStore()">Submit</button>
+      <input
+        type="text"
+        id="questionbox"
+        class="form-control col"
+        placeholder="Type Here"
+      />
+      <button
+        type="button"
+        class="btn btn-primary col-3"
+        onclick="questionStore()"
+      >
+        Submit
+      </button>
     </div>
   </body>
 </html>
