cleaned up input storage logic

--- a/answerInput.html
+++ b/answerInput.html
@@ -24,23 +24,23 @@
     <h1>Answer this:</h1>
     <h2 id="askQuestion">Whoops! Something went wrong!</h2>
     <div class="row" id="answerRow">
-      <input type="text" id="answerOne" class="form-control col" />
+      <input type="text" id="answer1" class="form-control col" />
       <button
         type="button"
-        id="buttonOne"
+        id="button1"
         class="btn btn-primary col-3"
-        onclick="answerSubmit('One')"
+        onclick="answerSubmit(1,false)"
       >
         Submit
       </button>
     </div>
     <div class="row">
-      <input type="text" id="answerTwo" class="form-control col" />
+      <input type="text" id="answer2" class="form-control col" />
       <button
         type="button"
-        id="buttonTwo"
+        id="button2"
         class="btn btn-primary col-3"
-        onclick="answerSubmit('Two')"
+        onclick="answerSubmit(2,false)"
       >
         Submit
       </button>
