--- a/counterInput.html
+++ b/counterInput.html
@@ -25,12 +25,12 @@
     <div class="row">
       <h2 id="askQuestion">Whoops! Something went wrong!</h2>
       <h3 id="answer1">Whoops! Something went wrong!</h3>
-      <input type="text" id="counterOne" class="form-control col" />
+      <input type="text" id="counter1" class="form-control col" />
       <button
         type="button"
-        id="buttonOne"
+        id="button1"
         class="btn btn-primary col-3"
-        onclick="counterSubmit('One')"
+        onclick="answerSubmit(1,true)"
       >
         Submit
       </button>
@@ -38,12 +38,12 @@
     <hr />
     <h3 id="answer2">Whoops! Something went wrong!</h3>
     <div class="row">
-      <input type="text" id="counterTwo" class="form-control col" />
+      <input type="text" id="counter2" class="form-control col" />
       <button
         type="button"
-        id="buttonTwo"
+        id="button2"
         class="btn btn-primary col-3"
-        onclick="counterSubmit('Two')"
+        onclick="answerSubmit(2,true)"
       >
         Submit
       </button>
