added css rules

--- a/question.html
+++ b/question.html
@@ -18,9 +18,11 @@
     <script defer src="./main.js"></script>
   </head>
   <body
-    class="container-xl text-center position-absolute top-50 start-50 translate-middle"
+    class="container text-center position-absolute top-50 start-50 translate-middle"
   >
-    <h1>Ask a Question</h1>
+    <div class="currentTitle">
+      <h1>Ask a Question</h1>
+    </div>
     <div class="row">
       <input
         type="text"
