--- a/displayAnswers.html
+++ b/displayAnswers.html
@@ -21,10 +21,18 @@
     onload="loadAnswers()"
     class="container text-center position-absolute top-50 start-50 translate-middle"
   >
-    <h1>Here are the answers to:</h1>
-    <h2 id="askQuestion">Whoops! Something went wrong!</h2>
-    <h3 id="answer1">Whoops! Something went wrong!</h3>
-    <h3 id="answer2">Whoops! Something went wrong!</h3>
+    <div class="currentTitle">
+      <h1>Here are the answers to:</h1>
+      <div class="currentQuestion">
+        <h2 id="askQuestion">Whoops! Something went wrong!</h2>
+      </div>
+    </div>
+    <div class="input1">
+      <h3 id="answer1">Whoops! Something went wrong!</h3>
+    </div>
+    <div class="input2">
+      <h3 id="answer2">Whoops! Something went wrong!</h3>
+    </div>
     <button type="button" class="btn btn-primary" onclick="counterRedirect()">
       Next
     </button>
