--- a/displayCounters.html
+++ b/displayCounters.html
@@ -21,13 +21,25 @@
     onload="loadCounters()"
     class="container text-center position-absolute top-50 start-50 translate-middle"
   >
+    <div class="currentTitle">
     <h1>Time for the counters to:</h1>
+    <div class="currentQuestion">
     <h2 id="askQuestion">Whoops! Something went wrong!</h2>
+    </div>
+    </div>
+    <div class="input1">
     <h3 id="answer1">Whoops! Something went wrong!</h3>
+    <div class="input2">
     <h3 id="counter1">Whoops! Something went wrong!</h3>
+    </div>
+    </div>
     <hr />
+    <div class="input2">
     <h3 id="answer2">Whoops! Something went wrong!</h3>
+    <div class="input1">
     <h3 id="counter2">Whoops! Something went wrong!</h3>
+    </div>
+    </div>
     <button
       type="button"
       id="restartButton"
