--- a/streamer/index.html
+++ b/streamer/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-bs-theme="dark">
   <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="../style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
@@ -15,17 +15,17 @@
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
       crossorigin="anonymous"
     ></script>
-    <script defer src="./main.js"></script>
+    <script defer src="../main.js"></script>
   </head>
   <body
     class="container text-center position-absolute top-50 start-50 translate-middle"
   >
     <h1>CounterReply</h1>
-    <button type="button" class="btn btn-primary" onclick="begin()">
-      Begin Game
-    </button>
     <button type="button" class="btn btn-danger" onclick="beginStreamer()">
       Streamer Mode
     </button>
+    <button type="button" class="btn btn-primary" onclick="begin()">
+      Return to Normal
+    </button> <br>
   </body>
 </html>
