--- a/displayAnswers.html
+++ b/displayAnswers.html
@@ -16,6 +16,7 @@
       crossorigin="anonymous"
     ></script>
     <script defer src="./main.js"></script>
+    <title>CounterReply|Answer Display</title>
   </head>
   <body
     onload="loadAnswers()"
