--- a/streamer/displayQuestion.html
+++ b/streamer/displayQuestion.html
@@ -16,6 +16,7 @@
       crossorigin="anonymous"
     ></script>
     <script defer src="../main.js"></script>
+    <title>CounterReply|Question Display|Streamer</title>
   </head>
   <body
     onload="loadAnswers()"
