--- a/streamer/waiting.html
+++ b/streamer/waiting.html
@@ -16,6 +16,7 @@
       crossorigin="anonymous"
     ></script>
     <script defer src="../main.js"></script>
+    <title>CounterReply|Waiting|Streamer</title>
   </head>
   <body
     class="container text-center position-absolute top-50 start-50 translate-middle"
