--- a/displayCounters.html
+++ b/displayCounters.html
@@ -16,6 +16,7 @@
       crossorigin="anonymous"
     ></script>
     <script defer src="./main.js"></script>
+    <title>CounterReply|Counter Display</title>
   </head>
   <body
     onload="loadCounters()"
