--- a/streamer/displayCounters.html
+++ b/streamer/displayCounters.html
@@ -16,6 +16,7 @@
       crossorigin="anonymous"
     ></script>
     <script defer src="../main.js"></script>
+    <title>CounterReply|Counter Display|Streamer</title>
   </head>
   <body
     onload="loadCounters()"
